--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "polaric"
+name = "polaroids"
 version = "0.1.0"
 description = "Validate you Generic polars dataframes"
 readme = "README.md"
