--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,17 @@
 site_name: Polaroids
 theme:
   name: "material"
+  features:
+    - content.code.copy
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 
 plugins:
   - search
@@ -10,6 +21,7 @@ plugins:
         python:
           options:
             docstring_style: "numpy"
+            merge_init_into_class: true
 nav:
   - Home: index.md
   - API Reference: api.md
